--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
 		"@oslojs/encoding": "^1.1.0",
 		"@sejohnson/svelte-themes": "^0.0.6",
 		"@sveltejs/adapter-vercel": "^5.5.2",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@sveltejs/kit": "2.16.0",
+		"@sveltejs/vite-plugin-svelte": "5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/ms": "^2.1.0",
 		"@vercel/blob": "^0.27.3",
